[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Joakim Sorensen <hi@ludeeus.dev>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ['**/__pycache__']
include = ["pyhaversion", "pyhaversion.*", "LICENCE.md"]
license = "MIT"
keywords = ["homeassistant", "version", "update"]
description = "Get the latest Home Assistant version from various sources."
maintainers = ["Joakim Sorensen <hi@ludeeus.dev>"]
name = "pyhaversion"
readme = "README.md"
repository = "https://github.com/ludeeus/pyhaversion"
version = "0"

[tool.black]
line-length = 100
target-version = ['py312']
exclude = 'generated'

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.6"
awesomeversion = ">21"

[tool.poetry.dev-dependencies]
aresponses = "^3"
awesomeversion = ">21"
black = "24.4.2"
isort = "^5"
mypy = "1.10.0"
pre-commit = "3.7.1"
pre-commit-hooks = "4.6.0"
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
pytest-cov = "5.0.0"

[tool.coverage.run]
source = ["pyhaversion"]

[tool.coverage.report]
skip_covered = false
fail_under = 100
exclude_lines = [
  "^\\s*if (False|TYPE_CHECKING):"
]
omit = [
    "setup.py",
    "tests/*",
    "example.py"
]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.pytest]
asyncio_mode = "strict"
adopts = ["-rxf", "-x", "-v", "-l"]
